--- a/src/resources/sass/cpanel/styleClasses.scss
+++ b/src/resources/sass/cpanel/styleClasses.scss
@@ -1,6 +1,6 @@
 .unset{all:unset;}
 ////////////margins
-.mA{margin:auto;}
+.ma{margin:auto;}
 .mXA{margin-left:auto;margin-right:auto;}
 .mTA{margin-top:auto;}
 
