--- a/src/resources/sass/style/colors.scss
+++ b/src/resources/sass/style/colors.scss
@@ -26,9 +26,15 @@
 .c_white-9{color:var(--white-9)}
 .c_white-10{color:var(--white-10)}
 
+.c_txt1{color:var(--txt-1)}
+.c_txt2{color:var(--txt-2)}
+
 .cO{color:var(--orange)}
 .cOtxt{color:var(--orange-txt)}
 .cG{color:var(--green)}
 .cGtxt{color:var(--green-txt)}
 .cR{color:var(--red)}
 .cRtxt{color:var(--red-txt)}
+
+.cStar{color:var(--star)}
+
