--- a/src/resources/sass/style/font.scss
+++ b/src/resources/sass/style/font.scss
@@ -10,7 +10,7 @@
 .lThrough{text-decoration: line-through;}
 .tdNone{text-decoration: none;}
 .hvr-tdNone:hover{text-decoration: none;}
-fs085
+
 .fs01{font-size:0.1em}
 .fs01-400{@media (max-width:400px){font-size:0.1em}}
 .fs01-720{@media (max-width:720px){font-size:0.1em}}
@@ -48,6 +48,48 @@ fs085
 .fs09-400{@media (max-width:400px){font-size:0.9em}}
 .fs09-720{@media (max-width:720px){font-size:0.9em}}
 .fs09-1024{@media (max-width:1024px){font-size:0.9em}}
+
+.fs1{font-size:1em}
+.fs1-400{@media (max-width:400px){font-size:1em}}
+.fs1-720{@media (max-width:720px){font-size:1em}}
+.fs1-1024{@media (max-width:1024px){font-size:1em}}
+.fs101{font-size:1.1em}
+.fs101-400{@media (max-width:400px){font-size:1.1em}}
+.fs101-720{@media (max-width:720px){font-size:1.1em}}
+.fs101-1024{@media (max-width:1024px){font-size:1.1em}}
+.fs102{font-size:1.2em}
+.fs102-400{@media (max-width:400px){font-size:1.2em}}
+.fs102-720{@media (max-width:720px){font-size:1.2em}}
+.fs102-1024{@media (max-width:1024px){font-size:1.2em}}
+.fs103{font-size:1.3em}
+.fs103-400{@media (max-width:400px){font-size:1.3em}}
+.fs103-720{@media (max-width:720px){font-size:1.3em}}
+.fs103-1024{@media (max-width:1024px){font-size:1.3em}}
+.fs104{font-size:1.4em}
+.fs104-400{@media (max-width:400px){font-size:1.4em}}
+.fs104-720{@media (max-width:720px){font-size:1.4em}}
+.fs104-1024{@media (max-width:1024px){font-size:1.4em}}
+.fs105{font-size:1.5em}
+.fs105-400{@media (max-width:400px){font-size:1.5em}}
+.fs105-720{@media (max-width:720px){font-size:1.5em}}
+.fs105-1024{@media (max-width:1024px){font-size:1.5em}}
+.fs106{font-size:1.6em}
+.fs106-400{@media (max-width:400px){font-size:1.6em}}
+.fs106-720{@media (max-width:720px){font-size:1.6em}}
+.fs106-1024{@media (max-width:1024px){font-size:1.6em}}
+.fs107{font-size:1.7em}
+.fs107-400{@media (max-width:400px){font-size:1.7em}}
+.fs107-720{@media (max-width:720px){font-size:1.7em}}
+.fs107-1024{@media (max-width:1024px){font-size:1.7em}}
+.fs108{font-size:1.8em}
+.fs108-400{@media (max-width:400px){font-size:1.8em}}
+.fs108-720{@media (max-width:720px){font-size:1.8em}}
+.fs108-1024{@media (max-width:1024px){font-size:1.8em}}
+.fs109{font-size:1.9em}
+.fs109-400{@media (max-width:400px){font-size:1.9em}}
+.fs109-720{@media (max-width:720px){font-size:1.9em}}
+.fs109-1024{@media (max-width:1024px){font-size:1.9em}}
+
 
 .fs2{font-size:2em}
 .fs2-400{@media (max-width:400px){font-size:2em}}
