--- a/src/resources/css/colors.css
+++ b/src/resources/css/colors.css
@@ -12,6 +12,7 @@
     --white-10:rgb(165, 165, 165);
 
     --txt-1:rgb(40, 40, 40);
+    --txt-2:rgb(255, 255, 255);
 
     --shdw-5:rgba(0, 0, 0, 0.05);
     --shdw-10:rgba(0, 0, 0, 0.1);
@@ -20,6 +21,8 @@
     --shdw-40:rgba(0, 0, 0, 0.4);
     --shdw-50:rgba(0, 0, 0, 0.5);
     --shdw-60:rgba(0, 0, 0, 0.6);
+    --shdw-70:rgba(0, 0, 0, 0.7);
+    --shdw-80:rgba(0, 0, 0, 0.8);
 
     --green-txt:rgb(255, 255, 255);
     --green:rgb(16, 144, 146);
@@ -59,6 +62,8 @@
     --red-20:rgba(241, 32, 49, 0.2);
     --red-10:rgba(241, 32, 49, 0.1);
     --red-5:rgba(241, 32, 49, 0.05);
+
+    --star:#ffb700;
 
     /* ///// */
     /* --bbg:rgb(249, 249, 249);
