--- a/src/resources/css/colorsDark.css
+++ b/src/resources/css/colorsDark.css
@@ -12,6 +12,7 @@
     --white-10:rgb(130, 130, 130);
 
     --txt-1:rgb(200, 200, 200);
+    --txt-2:rgb(255, 255, 255);
 
     --green-txt:rgb(255, 255, 255);
     --green:rgb(16, 144, 146);
@@ -58,6 +59,10 @@
     --shdw-40:rgba(0, 0, 0, 0.4);
     --shdw-50:rgba(0, 0, 0, 0.5);
     --shdw-60:rgba(0, 0, 0, 0.6);
+    --shdw-70:rgba(0, 0, 0, 0.7);
+    --shdw-80:rgba(0, 0, 0, 0.8);
+
+    --star:#ffb700;
 
     /* ///// */
     /* --bbg:rgb(26, 26, 26);
