--- a/src/resources/sass/cpanel/pages/categories/categoriesList.scss
+++ b/src/resources/sass/cpanel/pages/categories/categoriesList.scss
@@ -1,15 +1,7 @@
-#categoriesList-categoriesListContainer{
-    width:100%;
-    display:flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-items: flex-start;
-    justify-content: center;
-}
 .categoryCardContainer{
     border-radius: 3px;
-    box-shadow: var(--shdw5);
-    background-color: var(--c2);
+    box-shadow: 0 0 1px 1px var(--shdw-5),0 0 10px var(--shdw-5);
+    background-color: var(--white-1);
     display:flex;
     overflow: hidden;
     flex-direction: column;
@@ -18,60 +10,38 @@
     position: relative;
     margin:15px;
     transition-duration: .3s;
-    width: 250px;
+    width: 200px;
 }
+
 .categoryCardMoveContainer{
     position: absolute;
-    top: 0;
-    left: 0;
-    border-radius: 50%;
-    background-color: var(--shdw-20);
-    color: var(--c4txt);
+    top: 0px;
+    right: 0px;
+    border-radius: 0px;
+    color: var(--txt-2);
     display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 30px;
-    width: 30px;
-    margin: 5px;
+    align-items: flex-start;
+    justify-content: flex-end;
+    height: 25px;
+    width: 25px;
 }
-.categoryCardMoveContainer:hover{
-    background-color: var(--shdw-50);
+.categoryCardMoveContainer::before{
+    content: '';
+    position: absolute;
+    top:0;
+    left:0;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    border-width: 0 25px 25px 0;
+    border-color: transparent var(--shdw-60) transparent transparent;
+    z-index: 1;
 }
-.categoryCardMove{
-    cursor: move;
-    font-size:1.4em;
-    color:var(--c4txt)
-}
-.categoryCardImg{
-    height: 200px;
-    width: 100%;
-    object-fit: cover;
-    pointer-events: none;
-}
-.categoryCardName{
-    font-size: 1.3em;
-    margin: 10px 5px;
-    @media (max-width:1024px) {
-        font-size: 1.2em;
-    };
-    width: calc(100% - 10px);
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: inline;
-    white-space: nowrap;
-}
-.categoryCardIconsContainer{
-    display:flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    width:100%;
-    border-top: 1px solid var(--sttsbr);
-}
+
 .categoryCardIcon{
     padding: 10px 10px;
     cursor: pointer;
-    font-size: 1.5em;
+    font-size: 1.1em;
     box-shadow: none;
     flex-grow: 1;
     display:flex;
@@ -79,32 +49,31 @@
     justify-content: center;
 }
 .categoryCardIcon:hover{
-    background-color: var(--c3);
-    box-shadow: 0 0 1px 0px var(--shdw-10);
+    background-color: var(--white-2);
 }
 .categoryCardDelete:hover{
     color:var(--red);
 }
 
 ///////sort
-#categoryCardOnMove{
-    display:none;
+.categoryCardOnMove{
+    display:flex;
     position: absolute;
     transition-duration: 0s !important;
-    z-index: 70;
+    z-index: 1000;
     transform: scale(.6);
     transform-origin: 5% 5%;
     box-shadow: 0 0 10px 0 var(--shdw-10), 0 0 0px 1px var(--shdw-5);
 
     border-radius: 3px;
-    background-color: var(--c2);
+    background-color: var(--white-1);
     display:flex;
     overflow: hidden;
     flex-direction: column;
     align-items: flex-start;
     justify-content: flex-start;
     transition-duration: .2s;
-    width: 250px;
+    width: 200px;
     pointer-events: none;
 }
 .categoryCardSelectedOnMove{
