--- a/src/resources/sass/cpanel/pages/products/manageProducts.scss
+++ b/src/resources/sass/cpanel/pages/products/manageProducts.scss
@@ -58,101 +58,6 @@
 }
 
 
-// #manageProducts-manageProductsContainer{
-//     width:100%;
-//     display:flex;
-//     flex-direction: row;
-//     flex-wrap: wrap;
-//     align-items:stretch;
-//     justify-content: center;
-// }
-// .manageProductCardContainer{
-//     border-radius: 3px;
-//     box-shadow: var(--shdw5);
-//     background-color: var(--c2);
-//     display:flex;
-//     overflow: hidden;
-//     flex-direction: column;
-//     align-items: flex-start;
-//     justify-content: flex-start;
-//     position: relative;
-//     margin:15px;
-//     transition-duration: .3s;
-//     width: 250px;
-// }
-
-// .manageProductCardMoveContainer{
-//     position: absolute;
-//     top: 0;
-//     left: 0;
-//     border-radius: 50%;
-//     background-color: var(--shdw-20);
-//     color: var(--c4txt);
-//     display: flex;
-//     align-items: center;
-//     justify-content: center;
-//     height: 30px;
-//     width: 30px;
-//     margin: 5px;
-// }
-// .manageProductCardMoveContainer:hover{
-//     background-color: var(--shdw-50);
-// }
-// .manageProductCardMove{
-//     cursor: move;
-//     font-size:1.4em;
-//     color:var(--c4txt)
-// }
-// .manageProductCardImg{
-//     height: 200px;
-//     width: 100%;
-//     object-fit: cover;
-// }
-// .manageProductCardName{
-//     font-size: 1.3em;
-//     margin: 0 5px;
-//     @media (max-width:1024px) {
-//         font-size: 1.2em;
-//     };
-//     width: calc(100% - 10px);
-//     overflow: hidden;
-//     text-overflow: ellipsis;
-//     display: inline;
-//     white-space: nowrap;
-// }
-// .manageProductCardIconsContainer{
-//     display:flex;
-//     flex-direction: row;
-//     align-items: center;
-//     justify-content: space-between;
-//     width:100%;
-//     border-top: 1px solid var(--sttsbr);
-//     margin-top: auto;
-// }
-// .manageProductCardIcon{
-//     padding: 10px 10px;
-//     cursor: pointer;
-//     font-size: 1.5em;
-//     box-shadow: none;
-//     flex-grow: 1;
-//     display:flex;
-//     align-items: center;
-//     justify-content: center;
-// }
-// .manageProductCardIcon:hover{
-//     background-color: var(--c3);
-//     box-shadow: 0 0 1px 0px var(--shdw-10);
-// }
-// .manageProductCardDelete:hover{
-//     color:var(--red);
-// }
-// .manageProductCardReviews{
-//     color:var(--c1txt);
-// }
-// .manageProductCardReviews:hover{
-//     color:var(--star)
-// }
-
 // ///////sort
 .manageProductCardOnMove{
     display:none;
@@ -182,6 +87,131 @@
     transform: rotateY(10deg) rotateX(5deg);
 }
 // //////////////// product options
+.productOptionContainer{
+    height:40px;
+    border:1px solid var(--white-3);
+    border-radius: 3px;
+    width:100%;
+    margin:15px 0 ;
+    overflow: hidden;
+    position: relative;
+}
+.productOptionContainer_expand{height:auto;}
+.productOptionContainerHead{
+    height:30px;
+    width:calc(100% - 20px);
+    padding:5px 10px;
+    display:flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px dashed var(--white-3);
+
+}
+.optionHeadBtn{
+    border-radius: 50%;
+    padding: 7px;
+    cursor: pointer;
+}
+.optionHeadBtn:hover{
+    background: var(--white-2);
+}
+.productOptionDeleteOption:hover{
+    color:var(--red)
+}
+///sort options
+.optionCardMoveContainer{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    border-radius: 0px;
+    // color: var(--txt-2);
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-end;
+    height: 15px;
+    width: 15px;
+    transform: rotateY(180deg);
+    font-size: .8em;
+}
+.optionCardSelectedOnMove{
+    opacity:.5;
+}
+.optionCardOnMove{
+    display:flex;
+    position: absolute;
+    transition-duration: 0s !important;
+    z-index: 1000;
+    transform: scale(.6);
+    transform-origin: 5% 5%;
+    box-shadow: 0 0 10px 0 var(--shdw-10), 0 0 0px 1px var(--shdw-5);
+
+    border-radius: 3px;
+    background-color: var(--white-1);
+    display:flex;
+    overflow: hidden;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    transition-duration: .2s;
+    width: 200px;
+    pointer-events: none;
+}
+.optionCardHighlighted{
+    box-shadow: var(--shdw-20) -3px 3px 10px 1px;
+    transform: rotateY(10deg) rotateX(5deg);
+}
+//selections
+.productOptionSelectionContainer{
+    padding:5px 10px;
+    width:calc(100% - 20px);
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom:1px solid var(--white-2);
+    position: relative;
+}
+.productOptionSelectionContainer:hover{
+    background-color: var(--white-2);
+}
+//sort selections
+.selectionCardMoveContainer{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    border-radius: 0px;
+    color: var(--txt);
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-end;
+    height: 10px;
+    width: 10px;
+    transform: rotateY(180deg);
+    font-size: .7em;
+}
+.selectionHeadBtn{
+    border-radius: 50%;
+    padding: 7px;
+    cursor: pointer;
+    font-size: 0.95em;
+}
+.selectionHeadBtn:hover{
+    background: var(--white-1);
+}
+// .selectionCardMoveContainer::before{
+//     content: '';
+//     position: absolute;
+//     top:0;
+//     left:0;
+//     width: 0;
+//     height: 0;
+//     border-style: solid;
+//     border-width: 0 15px 15px 0;
+//     border-color: transparent var(--shdw-60) transparent transparent;
+//     z-index: 1;
+// }
+
+//
 // .productOptionCardContainer{
 //     border-radius: 3px;
 //     box-shadow: var(--shdw5);
@@ -236,13 +266,8 @@
 //     pointer-events: none;
 
 // }
-// .productOptionCardSelectedOnMove{
-//     opacity:.5;
-// }
-// .productOptionCardHighlighted{
-//     box-shadow: var(--shdw-20) -2px 2px 7px 1px;
-//     transform: rotateY(6deg) rotateX(3deg);
-// }
+
+
 // .productOptionCardContainer_managing{
 //     background-color: var(--c3);
 // }
