--- a/src/resources/sass/cpanel/cpanel.scss
+++ b/src/resources/sass/cpanel/cpanel.scss
@@ -114,7 +114,7 @@ body{
 
 @import 'pages/categories/categoriesList';//done
 
-@import 'pages/products/manageProducts';
+@import 'pages/products/manageProducts';//done
 @import 'pages/products/productReviews';
 
 @import 'pages/design/templates';
