--- a/src/resources/sass/cpanel/pages/products/manageProducts.scss
+++ b/src/resources/sass/cpanel/pages/products/manageProducts.scss
@@ -88,7 +88,6 @@
 }
 // //////////////// product options
 .productOptionContainer{
-    height:40px;
     border:1px solid var(--white-3);
     border-radius: 3px;
     width:100%;
@@ -96,7 +95,6 @@
     overflow: hidden;
     position: relative;
 }
-.productOptionContainer_expand{height:auto;}
 .productOptionContainerHead{
     height:30px;
     width:calc(100% - 20px);
@@ -115,16 +113,16 @@
 .optionHeadBtn:hover{
     background: var(--white-2);
 }
-.productOptionDeleteOption:hover{
+.productOptionDelete:hover{
     color:var(--red)
 }
+
 ///sort options
 .optionCardMoveContainer{
     position: absolute;
     top: 0px;
     left: 0px;
     border-radius: 0px;
-    // color: var(--txt-2);
     display: flex;
     align-items: flex-start;
     justify-content: flex-end;
@@ -198,144 +196,38 @@
 .selectionHeadBtn:hover{
     background: var(--white-1);
 }
-// .selectionCardMoveContainer::before{
-//     content: '';
-//     position: absolute;
-//     top:0;
-//     left:0;
-//     width: 0;
-//     height: 0;
-//     border-style: solid;
-//     border-width: 0 15px 15px 0;
-//     border-color: transparent var(--shdw-60) transparent transparent;
-//     z-index: 1;
-// }
+.productOptionSelectionDelete:hover{
+    color:var(--red)
+}
 
-//
-// .productOptionCardContainer{
-//     border-radius: 3px;
-//     box-shadow: var(--shdw5);
-//     background-color: var(--c2);
-//     display:flex;
-//     flex-direction: row;
-//     align-items: center;
-//     justify-content: space-between;
-//     position: relative;
-//     margin:10px 0;
-//     transition-duration: .2s;
-// }
-// .productOptionCardMoveIcon{
-//     cursor: move;
-// }
-// .productOptionCardIconsContainer{
-//     display:flex;
-//     flex-direction: row;
-//     align-items: center;
-//     justify-content: flex-end;
-//     margin:5px;
-// }
-// .productOptionCardIcon{
-//     padding: 10px;
-//     border-radius:3px;
-//     cursor: pointer;
-//     font-size: 1.5em;
-//     margin: 3px 0;
-//     box-shadow: none;
-// }
-// .productOptionCardIcon:hover{
-//     background-color: var(--c3);
-//     box-shadow: 0 0 1px 0px var(--shdw-10);
-// }
-// .productOptionCardIconDelete:hover{
-//     color:var(--red);
-// }
-// #productOptionCardOnMove{
-//     display:none;
-//     position: absolute;
-//     transition-duration: 0s !important;
-//     z-index: 70;
-//     transform: scale(.7);
-//     transform-origin: 5% 5%;
-//     border-radius: 3px;
-//     box-shadow: var(--shdw5);
-//     background-color: var(--c2);
-//     flex-direction: row;
-//     align-items: center;
-//     justify-content: space-between;
-//     margin:10px 0;
-//     pointer-events: none;
+.selectionCardSelectedOnMove{
+    opacity:.5;
+}
+.selectionCardOnMove{
+    display:flex;
+    position: absolute;
+    transition-duration: 0s !important;
+    z-index: 1000;
+    transform: scale(.6);
+    transform-origin: 5% 5%;
+    box-shadow: 0 0 10px 0 var(--shdw-10), 0 0 0px 1px var(--shdw-5);
 
-// }
-
-
-// .productOptionCardContainer_managing{
-//     background-color: var(--c3);
-// }
-// ////////////selections
-// .selectionsOptionCard{
-//     border-radius: 3px;
-//     box-shadow: var(--shdw5);
-//     background-color: var(--c2);
-//     display:flex;
-//     flex-direction: row;
-//     align-items: center;
-//     justify-content: space-between;
-//     position: relative;
-//     margin:10px 0;
-//     width:100%;
-// }
-// .selectionCardContainer{
-//     border-radius: 3px;
-//     box-shadow: var(--shdw5);
-//     background-color: var(--c2);
-//     display:flex;
-//     flex-direction: row;
-//     align-items: center;
-//     justify-content: space-between;
-//     position: relative;
-//     margin:5px 0;
-//     transition-duration: .2s;
-//     width:90%;
-//     align-self: center;
-// }
-// .selectionCardMoveIcon{
-//     cursor: move;
-// }
-// .selectionCardIcon{
-//     padding: 10px;
-//     border-radius:3px;
-//     cursor: pointer;
-//     font-size: 1.5em;
-//     margin: 3px 0;
-//     box-shadow: none;
-// }
-// .selectionCardIcon:hover{
-//     background-color: var(--c3);
-//     box-shadow: 0 0 1px 0px var(--shdw-10);
-// }
-// .selectionCardIconDelete:hover{
-//     color:var(--red);
-// }
-// #selectionCardOnMove{
-//     display:none;
-//     position: absolute;
-//     transition-duration: 0s !important;
-//     z-index: 70;
-//     transform: scale(.7);
-//     transform-origin: 5% 5%;
-//     border-radius: 3px;
-//     box-shadow: var(--shdw5);
-//     background-color: var(--c2);
-//     flex-direction: row;
-//     align-items: center;
-//     justify-content: space-between;
-//     margin:10px 0;
-//     pointer-events: none;
-// }
-// .selectionCardSelectedOnMove{
-//     opacity:.5;
-// }
-// .selectionCardHighlighted{
-//     box-shadow: var(--shdw-20) -2px 2px 7px 1px;
-//     transform: rotateY(6deg) rotateX(3deg);
-// }
+    border-radius: 3px;
+    background-color: var(--white-1);
+    display:flex;
+    overflow: hidden;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    transition-duration: .2s;
+    width: 200px;
+    pointer-events: none;
+}
+.selectionCardHighlighted{
+    box-shadow: var(--shdw-20) -2px 2px 7px 1px;
+    transform: rotateY(6deg) rotateX(3deg);
+}
+.selectionCardHighlighted{
+    box-shadow: var(--shdw-20) -2px 2px 7px 1px;
+    transform: rotateY(6deg) rotateX(3deg);
+}
