--- a/src/resources/sass/style/colors.scss
+++ b/src/resources/sass/style/colors.scss
@@ -36,5 +36,11 @@
 .cR{color:var(--red)}
 .cRtxt{color:var(--red-txt)}
 
+.bgc_O{background-color: var(--orange);}
+.bgc_G{background-color: var(--green);}
+.bgc_R{background-color: var(--red);}
+
 .cStar{color:var(--star)}
+
+
 
