--- a/src/resources/css/colorsDark.css
+++ b/src/resources/css/colorsDark.css
@@ -62,6 +62,9 @@
     --shdw-70:rgba(0, 0, 0, 0.7);
     --shdw-80:rgba(0, 0, 0, 0.8);
 
+    --card-shdw:0 0 0px var(--shdw-5);
+
+
     --star:#ffb700;
 
     /* ///// */
