--- a/src/resources/sass/cpanel/pages/design/images.scss
+++ b/src/resources/sass/cpanel/pages/design/images.scss
@@ -1,6 +1,6 @@
 
 .storageBar{
-    background-color: var(--bgbr-bg);
+    background-color: var(--white-3);
     width: 100%;
     height: 7px;
     transition-duration: 1s;
@@ -15,53 +15,43 @@
     height: 7px;
     transition-duration: 1s;
 }
+
 ////////////////////imgs cards///////////////////////////
 .imgsImgCard{
-    box-shadow: 0 0 2px 1px var(--shdw-10);
-    width:200px;
+    background-color: var(--white-1);
+    color:var(--txt-1);
+    box-shadow:var(--card-shdw);
+    max-width:calc(100% - 20px);
+    width:300px;
     position:relative;
-    margin:10px;
+    margin:20px 10px;
     border-radius: 3px;
     overflow: hidden;
-    background-color: var(--c2);
-}
-.imgsimg{
-    width:200px;
-    height:200px;
-    object-fit: cover;
-    cursor: pointer;
-}
-.imgsImgInfo{
-    width:200px;
-    margin:10px 0;
-}
-.imgsImgName{
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
-    margin:0 5px;
 }
 .imgsimgBtns{
     position: absolute;
-    top:0;
-    left:0;
-    width:190px;
-    height:160px;
-    background-color: var(--shdw-50);
-    color: var(--c4txt);
-    backdrop-filter: blur(4px);
-    padding:20px 5px;
+    top:5px;
+    right:5px;
     display:flex;
-    flex-direction: column;
-    align-items: stretch;
-    justify-content: space-between;
-    transition-duration: .35s;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    transition-duration: .20s;
     opacity:0;
 }
 .imgsImgCard:hover{
     .imgsimgBtns{opacity:1;}
 }
-
+.imgsImgIcon{
+    font-size: 1.4em;
+    margin:1px;
+    padding:5px;
+    background-color: var(--shdw-20);
+    color:var(--txt-2);
+    border-radius: 4px;
+    cursor: pointer;
+    box-shadow: 0 0 5px var(--shdw-20);
+}
 ///////imgPreview
 
 #imgs-imgPreview{
