--- a/src/resources/css/colorsDark.css
+++ b/src/resources/css/colorsDark.css
@@ -52,6 +52,19 @@
     --red-10:rgba(241, 32, 49, 0.1);
     --red-5:rgba(241, 32, 49, 0.05);
 
+    --blue-txt:rgb(255, 255, 255);
+    --blue:rgb(40, 123, 206);
+    --blue-90:rgba(40, 123, 206, 0.9);
+    --blue-80:rgba(40, 123, 206, 0.8);
+    --blue-70:rgba(40, 123, 206, 0.7);
+    --blue-60:rgba(40, 123, 206, 0.6);
+    --blue-50:rgba(40, 123, 206, 0.5);
+    --blue-40:rgba(40, 123, 206, 0.4);
+    --blue-30:rgba(40, 123, 206, 0.3);
+    --blue-20:rgba(40, 123, 206, 0.2);
+    --blue-10:rgba(40, 123, 206, 0.1);
+    --blue-5:rgba(40, 123, 206, 0.05);
+
     --shdw-5:rgba(0, 0, 0, 0.05);
     --shdw-10:rgba(0, 0, 0, 0.1);
     --shdw-20:rgba(0, 0, 0, 0.2);
