--- a/src/resources/sass/cpanel/tools/popup.scss
+++ b/src/resources/sass/cpanel/tools/popup.scss
@@ -65,6 +65,7 @@
 .popupBody{
     padding:10px;
     width:calc(100% - 20px);
+    max-width:calc(100% - 20px);
     height:calc(100% - 20px);
     overflow-x: hidden;
     overflow-y: auto;
