--- a/src/resources/sass/style/colors.scss
+++ b/src/resources/sass/style/colors.scss
@@ -29,6 +29,9 @@
 .c_white-9{color:var(--white-9)}
 .c_white-10{color:var(--white-10)}
 
+.bgc_white-1{background-color:var(--white-1)}
+
+
 .c_txt1{color:var(--txt-1)}
 .c_txt2{color:var(--txt-2)}
 
@@ -38,10 +41,13 @@
 .cGtxt{color:var(--green-txt)}
 .cR{color:var(--red)}
 .cRtxt{color:var(--red-txt)}
+.cB{color:var(--blue)}
+.cBtxt{color:var(--blue-txt)}
 
 .bgc_O{background-color: var(--orange);}
 .bgc_G{background-color: var(--green);}
 .bgc_R{background-color: var(--red);}
+.bgc_B{background-color: var(--blue);}
 
 .cStar{color:var(--star)}
 
