--- a/src/resources/sass/style/borders.scss
+++ b/src/resources/sass/style/borders.scss
@@ -4,6 +4,7 @@
 .brdrR0{border-right:0px;}
 
 .brdrT1{border-top:1px solid var(--white-2);}
+.brdrT1_w3{border-top:1px solid var(--white-3);}
 .brdrB1{border-bottom:1px solid var(--white-2);}
 .brdrL1{border-left:1px solid var(--white-2);}
 .brdrR1{border-right:1px solid var(--white-2);}
