--- a/src/resources/sass/cpanel/cpanel/nav/guideHints.scss
+++ b/src/resources/sass/cpanel/cpanel/nav/guideHints.scss
@@ -15,13 +15,13 @@
 
 }
 .guideAlertContainer{
-    color:var(--txt) !important;
+    color:var(--txt-1) !important;
     width:calc(100% - 20px);
     padding: 15px 10px;
     cursor: pointer;
     display:flex;
     flex-direction: row;
-    align-items: flex-start;
+    align-items: center;
     justify-content: flex-start;
     text-align: start;
     position: relative;
@@ -48,26 +48,29 @@
     background-color: var(--orange);
 }
 .guideAlertIcon{
-    font-size:1.6em;
+    font-size:2em;
     margin:0;
+    color:var(--white-10)
 }
 .guideAlertIcon2{
-    font-size:1.6em;
+    font-size:2em;
     margin:0;
+    color:var(--white-10)
 }
 .guideAlertIconContainer{
-    margin-inline-end: 8px;
+    height:40px;
+    width:40px;
+    margin-inline-end: 10px;
     position: relative;
-    height:20px;
-}
-.guideAlertIconContainer2{
-    margin-inline-end: 13px;
-    position: relative;
-    height:20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-shrink: 0;
+
 }
 .guideAlertLangImg{
     position: absolute;
-    bottom: -25px;
+    bottom: -3px;
     right: -5px;
     height:20px;
     width:20px;
