--- a/src/resources/sass/cpanel/pages/security/phoneNumber.scss
+++ b/src/resources/sass/cpanel/pages/security/phoneNumber.scss
@@ -3,11 +3,10 @@
     flex-direction: row;
     align-items: center;
     justify-content: flex-start;
-    border:1px solid var(--inptbr);
+    border:1px solid var(--white-3);
     border-radius: 3px;
     width:fit-content;
     position: relative;
-    margin:0 10px;
 }
 .accountPhoneSelectFlag{
     height:30px;
@@ -19,9 +18,9 @@
     padding: 5px 3px;
     height:20px;
     background-color: transparent;
-    color: var(--inpttxt);
+    color: var(--txt-1);
     border:none;
-    font-size: 1.1em;
+    font-size: .9em;
     border-radius: 0;
     margin:0;
     user-select: auto;
@@ -32,15 +31,26 @@
 }
 .accountPhoneSelectCountryCode{
     width:35px;
-    border-inline-end:1px solid var(--inptbr);
+    border-inline-end:1px solid var(--white-3);
     padding-inline-start: 0;
 }
 .accountPhoneSelectKeysListContainer{
     position: absolute;
     top:30px;
-    background-color: var(--c1);
+    background-color: var(--white-1);
     box-shadow: 0 0 10px 3px var(--shdw-20);
     width:97px;
     height: 200px;
     overflow-y: scroll;
+}
+.accountPhoneSelectKeysElem{
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding:5px;
+    font-size: .9em;
+}
+.accountPhoneSelectKeysElem:hover{
+    background-color: var(--white-3);
 }
