--- a/src/resources/sass/cpanel/cpanel/bodyPage.scss
+++ b/src/resources/sass/cpanel/cpanel/bodyPage.scss
@@ -48,6 +48,8 @@
 }
 .pageSection_brdrT{border-top: 1px solid var(--white-3);}
 .pageSection_brdrB{border-bottom: 1px solid var(--white-3);}
+.pageSection_brdrL{border-left: 1px solid var(--white-3);}
+.pageSection_brdrR{border-right: 1px solid var(--white-3);}
 .pageSectionTitle{
     display: flex;
     align-items: center;
