--- a/src/resources/sass/style/colors.scss
+++ b/src/resources/sass/style/colors.scss
@@ -30,6 +30,15 @@
 .c_white-10{color:var(--white-10)}
 
 .bgc_white-1{background-color:var(--white-1)}
+.bgc_white-2{background-color:var(--white-2)}
+.bgc_white-3{background-color:var(--white-3)}
+.bgc_white-4{background-color:var(--white-4)}
+.bgc_white-5{background-color:var(--white-5)}
+.bgc_white-6{background-color:var(--white-6)}
+.bgc_white-7{background-color:var(--white-7)}
+.bgc_white-8{background-color:var(--white-8)}
+.bgc_white-9{background-color:var(--white-9)}
+.bgc_white-10{background-color:var(--white-10)}
 
 
 .c_txt1{color:var(--txt-1)}
@@ -65,3 +74,7 @@
 .bgc_deliveryT{background-color:var(--cdeliveryTxt);}
 .bgc_pickupT{background-color:var(--cpickupTxt);}
 .bgc_dineInT{background-color:var(--cdineInTxt);}
+
+
+.c_statistics1{color:var(--cs1)}
+.c_statistics2{color:var(--cs2)}
