--- a/src/resources/sass/style/borders.scss
+++ b/src/resources/sass/style/borders.scss
@@ -3,12 +3,17 @@
 .brdrL0{border-left:0px;}
 .brdrR0{border-right:0px;}
 
+.brdr1{border:1px solid var(--white-2);}
+.brdr1_3{border:1px solid var(--white-3);}
 .brdrT1{border-top:1px solid var(--white-2);}
 .brdrT1_w3{border-top:1px solid var(--white-3);}
 .brdrB1{border-bottom:1px solid var(--white-2);}
+.brdrB1_w3{border-bottom:1px solid var(--white-3);}
 .brdrL1{border-left:1px solid var(--white-2);}
 .brdrR1{border-right:1px solid var(--white-2);}
+.brdrR1_w3{border-right:1px solid var(--white-3);}
 
+.brdr2_3{border:2px solid var(--white-3);}
 .brdrT2{border-top:2px solid var(--white-2);}
 .brdrB2{border-bottom:2px solid var(--white-2);}
 .brdrL2{border-left:2px solid var(--white-2);}
