--- a/src/resources/css/colors.css
+++ b/src/resources/css/colors.css
@@ -1,4 +1,10 @@
 :root {
+
+    --sm-c:rgb(52, 58, 59);
+    --sm-c2:rgb(60, 70, 71);
+    --sm-c3:rgb(255,255,255);
+
+
     --white:rgb(255, 255, 255);
     --white-1:rgb(255, 255, 255);
     --white-2:rgb(247, 247, 247);
@@ -16,6 +22,7 @@
 
     --shdw-5:rgba(0, 0, 0, 0.05);
     --shdw-10:rgba(0, 0, 0, 0.1);
+    --shdw-15:rgba(0, 0, 0, 0.15);
     --shdw-20:rgba(0, 0, 0, 0.2);
     --shdw-30:rgba(0, 0, 0, 0.3);
     --shdw-40:rgba(0, 0, 0, 0.4);
