--- a/src/resources/css/colorsDark.css
+++ b/src/resources/css/colorsDark.css
@@ -1,4 +1,9 @@
 :root {
+
+    --sm-c:rgb(40, 40, 42);
+    --sm-c2:rgb(44, 46, 47);
+    --sm-c3:rgb(255,255,255);
+
     --white:rgb(35, 35, 35);
     --white-1:rgb(40, 40, 40);
     --white-2:rgb(50, 50, 50);
@@ -67,6 +72,7 @@
 
     --shdw-5:rgba(0, 0, 0, 0.05);
     --shdw-10:rgba(0, 0, 0, 0.1);
+    --shdw-15:rgba(0, 0, 0, 0.15);
     --shdw-20:rgba(0, 0, 0, 0.2);
     --shdw-30:rgba(0, 0, 0, 0.3);
     --shdw-40:rgba(0, 0, 0, 0.4);
