--- a/src/resources/sass/cpanel/cpanel/autoHelp.scss
+++ b/src/resources/sass/cpanel/cpanel/autoHelp.scss
@@ -49,11 +49,11 @@
 ///////////////////////
 
 .autoHelpContainer{
-    border-top: 3px solid var(--white-2);
-    border-bottom: 3px solid var(--white-2);
-    background-color: var(--white);
+    box-shadow: var(--card-shdw);
+    background-color: var(--white-1);
     color:var(--txt);
     padding:10px;
+    margin:10px;
     display:flex;
     flex-direction: column;
     align-items:flex-start;
