--- a/src/resources/sass/cpanel/cpanel/bodyPage.scss
+++ b/src/resources/sass/cpanel/cpanel/bodyPage.scss
@@ -2,7 +2,7 @@
     height: 100%;
     background-color: var(--white);
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
     position: relative;
     transition-duration: .5s;
 }
