--- a/src/resources/sass/cpanel/cpanel/helpWidnow.scss
+++ b/src/resources/sass/cpanel/cpanel/helpWidnow.scss
@@ -24,13 +24,13 @@
 #helpWindowControls{
     position: absolute;
     margin-inline-start: 5px;
-    top:0;
-    right:20px;
+    top:0px;
+    right:7px;
     border-bottom: none;
     border-radius: 0 0 5px 5px;
     height:fit-content;
     z-index: 43;
-    background-color: var(--white-1);
+    background-color: var(--white);
     color:var(--txt-1);
     box-shadow: 0 0 3px var(--shdw-10);
     padding:10px 3px;
