--- a/src/resources/sass/cpanel/cpanel/statusBar.scss
+++ b/src/resources/sass/cpanel/cpanel/statusBar.scss
@@ -3,9 +3,9 @@
     width: calc(100% - 10px);
     height:20px;
     padding: 0 5px;
-    background-color: var(--white-1);
-    color: var(--bg-txt);
-    border-top:1px solid var(--white-2);
+    background-color: var(--sm-c);
+    color: var(--sm-c3);
+    // border-top:1px solid var(--white-2);
     position: relative;
     z-index: 50;
     font-size: 0.8em;
