--- a/src/resources/sass/cpanel/cpanel/nav/menu.scss
+++ b/src/resources/sass/cpanel/cpanel/nav/menu.scss
@@ -6,11 +6,12 @@
 }
 #menuList{
     width:400px;
-    right:0px;
+    right:10px;
     @media (max-width:520px) {
         right:0px;
         left:0px;
-        width:calc(100%);
+        margin:0 20px;
+        width:calc(100% - 40px);
         max-height: calc(100% - 80px);
     }
 }
