--- a/src/resources/sass/cpanel/cpanel/popupPage.scss
+++ b/src/resources/sass/cpanel/cpanel/popupPage.scss
@@ -34,7 +34,7 @@
 }
 #popupPageTitle{
     display:flex;
-    align-items: center;
+    align-items: baseline;
     font-weight:500;
     font-family: 'inter','Nunito','Tajawal', sans-serif;
     font-size:1.1em;
