--- a/src/resources/sass/cpanel/cpanel/sideMenu.scss
+++ b/src/resources/sass/cpanel/cpanel/sideMenu.scss
@@ -38,6 +38,7 @@
      }
     display:none;
     z-index: 39;
+    background-color: var(--sm-c2);
 }
 .sideMenu-Container_small{
     .sideMenu-itemsContainerTitle{display:none;}
