--- a/src/resources/sass/style/width.scss
+++ b/src/resources/sass/style/width.scss
@@ -320,6 +320,7 @@
 .mxw1366{max-width:1366px;}
 ///
 .mxw100p-40{max-width:calc(100% - 40px)}
+.mxw100p-20{max-width:calc(100% - 20px)}
 ////
 .w100p-1024{@media(max-width:1024px){width:100%}}
 .w100p-720{@media(max-width:720px){width:100%}}
