--- a/src/resources/sass/cpanel/cpanel/nav/liveChat.scss
+++ b/src/resources/sass/cpanel/cpanel/nav/liveChat.scss
@@ -14,7 +14,8 @@
     @media (max-width:520px) {
         right:0px;
         left:0px;
-        width:calc(100%);
+        margin:0 20px;
+        width:calc(100% - 40px);
         max-height: calc(100% - 80px);
     }
 }
