--- a/src/resources/sass/cpanel/cpanel/nav/notifications.scss
+++ b/src/resources/sass/cpanel/cpanel/nav/notifications.scss
@@ -1,11 +1,12 @@
 ////////////////noptifications
 #notificationsList{
     width: 350px;
-    right:0px;
+    right:10px;
     @media (max-width:520px) {
         right:0px;
         left:0px;
-        width:calc(100%);
+        margin:0 20px;
+        width:calc(100% - 40px);
         max-height: calc(100% - 80px);
     }
 }
