--- a/src/resources/sass/cpanel/pages/dashboard/statistics.scss
+++ b/src/resources/sass/cpanel/pages/dashboard/statistics.scss
@@ -89,6 +89,7 @@ text{fill:var(--txt-1)}
 .statistics_overviewHeadElem{
     padding:20px;
     margin-inline-end:10px;
+    margin-bottom:10px;
     flex-grow: 1;
     border-radius: 5px;
     box-shadow: var(--card-shdw);
