--- a/src/resources/sass/cpanel/cpanel/nav.scss
+++ b/src/resources/sass/cpanel/cpanel/nav.scss
@@ -1,7 +1,7 @@
 .nav{
     // width:calc(100%);
     // padding:5px;
-    margin: 10px;
+    padding: 5px 10px;
     width: calc(100% - 20px);
     background-color: var(--white);
     color:var(--txt-1);
@@ -15,7 +15,7 @@
      @media print {
         display:none;
     }
-    // border-bottom: 1px solid var(--white-2);
+    border-bottom: 1px solid var(--white-2);
 
     @media (max-width:520px) {
         justify-content: center;
