--- a/src/resources/sass/cpanel/cpanel.scss
+++ b/src/resources/sass/cpanel/cpanel.scss
@@ -103,6 +103,7 @@ body{
 @import 'pages/dashboard/statistics';//done
 @import 'pages/dashboard/restaurantExpenses';//done
 @import 'pages/dashboard/financialReports';//done
+@import 'pages/dashboard/quickLinks';//done
 
 @import 'pages/security/phoneNumber';//done
 
