--- a/src/resources/sass/cpanel/tools/_icons.scss
+++ b/src/resources/sass/cpanel/tools/_icons.scss
@@ -49,6 +49,9 @@
   .ico-home:before {
     content: "\e92d";
   }
+  .ico-quick_links:before {
+    content: "\e9b0";
+  }
   .ico-activity_log:before {
     content: "\e92f";
   }
