--- a/src/resources/sass/cpanel/cpanel/nav.scss
+++ b/src/resources/sass/cpanel/cpanel/nav.scss
@@ -1,9 +1,7 @@
 .nav{
-    // width:calc(100%);
-    // padding:5px;
     padding: 5px 10px;
     width: calc(100% - 20px);
-    background-color: var(--white);
+    background-color: var(--shdw-5);
     color:var(--txt-1);
     display:flex;
     flex-direction: row;
@@ -15,7 +13,7 @@
      @media print {
         display:none;
     }
-    border-bottom: 1px solid var(--white-2);
+    border-bottom: 1px solid var(--white-3);
 
     @media (max-width:520px) {
         justify-content: center;
@@ -67,18 +65,19 @@
     align-items: center;
     justify-content: center;
     position: relative;
+    // background-color:var(--white-1);
     z-index: 10;
 }
 .navElement:hover{
-    background-color:var(--white-2);
+    background-color:var(--white-1);
 }
 .navElementSelected{
-    background-color:var(--white-2);
+    background-color:var(--white-1);
 }
 .navElementNum{
     user-select: none;
     border:1px solid var(--white-2);
-    background-color: var(--white);
+    background-color: var(--shdw-5);
     min-width: 10px;
     min-height: 10px;
     padding: 2px;
