--- a/src/resources/sass/cpanel/cpanel/popupPage.scss
+++ b/src/resources/sass/cpanel/cpanel/popupPage.scss
@@ -53,7 +53,7 @@
     }
 }
 #popupPageBody{
-    overflow-x: hidden;
+    overflow-x: auto;
     overflow-y: auto;
     height: calc(100% - 82px);
     padding-bottom:20px;
