--- a/src/resources/sass/cpanel/tools/popup.scss
+++ b/src/resources/sass/cpanel/tools/popup.scss
@@ -67,7 +67,7 @@
     width:calc(100% - 20px);
     max-width:calc(100% - 20px);
     height:calc(100% - 20px);
-    overflow-x: hidden;
+    overflow-x: auto;
     overflow-y: auto;
 }
 
